MDEV-29947 Spider doesn't return all rows when doing a join of two tables with no usable keys

followup for 57d233e2a67d